platform-services/db-admin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-admin-console
  namespace: db-admin
  labels:
    platform.capstone/component: platform
    app.kubernetes.io/name: db-admin-console
spec:
  selector:
    app.kubernetes.io/name: db-admin-console
  ports:
    - port: 80
      targetPort: 8080
