platform-services/db-admin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: db-admin-console
  namespace: db-admin
  labels:
    platform.capstone/component: platform
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: db-admin-db-admin-console-auth@kubernetescrd
spec:
  rules:
    - host: db-admin.capstone.uamishub.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: db-admin-console
                port:
                  number: 80
  tls:
    - hosts:
        - db-admin.capstone.uamishub.com
